# flet-android-notifications

./: .gitignore  README.md  build.py  generate_test_beep.py  main.py  pyproject.toml
.github/workflows/: release.yml
example/: main.py  pyproject.toml
examples/: README.md  action_buttons.py  advanced_options.py  big_text.py  foreground_service.py  notification_styles.py  periodic.py  query_notifications.py  scheduled.py  simple.py  timeout.py
flet_android_notifications/: README.md  pyproject.toml
flet_android_notifications/src/flet_android_notifications/: __init__.py  flet_android_notifications.py
flet_android_notifications/src/flutter/flet_android_notifications/: pubspec.yaml
flet_android_notifications/src/flutter/flet_android_notifications/lib/: flet_android_notifications.dart
flet_android_notifications/src/flutter/flet_android_notifications/lib/src/: extension.dart  notifications_service.dart
test_resources/: ic_notification.xml
