[project]
name = "flet-android-notifications-demo"
version = "0.1.0"
description = "Demo app for flet-android-notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.80.5",
    "flet-android-notifications",
]

[tool.uv.sources]
flet-android-notifications = { path = "flet_android_notifications", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.SCHEDULE_EXACT_ALARM" = true
"android.permission.RECEIVE_BOOT_COMPLETED" = true

[tool.flet.app]
exclude = ["flet_android_notifications"]

[tool.flet.dev_packages]
flet-android-notifications = "flet_android_notifications"
