[project]
name = "flet-android-notifications"
version = "0.7.1"
description = "Native local notifications for Flet apps (Android)"
requires-python = ">=3.10"
readme = "../README.md"
license = "MIT"
authors = [
    {name = "Alex Stoica", email = "alexstoica@protonmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flet>=0.80.5",
]

[project.urls]
Homepage = "https://github.com/alex-stoica/flet-android-notifications"
Repository = "https://github.com/alex-stoica/flet-android-notifications"
Issues = "https://github.com/alex-stoica/flet-android-notifications/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flet_android_notifications", "src/flutter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
